bookstore-docker-sarvesh/mongo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: 012345678910.dkr.ecr.us-east-1.amazonaws.com/mongoapp:latest
        ports:
        - containerPort: 5000
---
                      # Service type node port
# apiVersion: v1
# kind: Service
# metadata:
#   name: mongo-service
# spec:
#   type: NodePort
#   selector:
#     app: mongo
#   ports:
#     - protocol: TCP
#       port: 5000
#       nodePort : 32675
#       targetPort: 5000


                       # service type ingress controller


apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
