bookstore-docker-sarvesh/web-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: 012345678910.dkr.ecr.us-east-1.amazonaws.com/myappfront:latest
        ports:
        - containerPort: 3000
---
                    # Service type node port
# apiVersion: v1
# kind: Service
# metadata:
#   name: webapp-service
# spec:
#   type: NodePort
#   selector:
#     app: webapp
#   ports:
#     - protocol: TCP
#       port: 3000
#       targetPort: 3000
#       nodePort: 31192
      # name: http



                      # Service type ingress controller
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
