bookstore-docker-sarvesh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress-1
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    # with Domain
  - host: "testfrontend.manthanthakkar.works"

    # without Domain execute both service
    http:
      paths:
      # - path: /backend
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: mongo-service
      #       port:
      #         number: 80
  


      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 80
