bookstore-docker-sarvesh/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress-2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    # with domain
  - host: "testbackend.manthanthakkar.works"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-service
            port:
              number: 80
